chore: Update GitHub Actions