@@ -7,21 +7,23 @@ import org.bukkit.ChatColor;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 
+@SuppressWarnings("UnstableApiUsage")
 public class UpdateChecker {
+    private static final int TIMEOUT = 1250;
+    
     public static void check() {
         try {
-            HttpURLConnection connection = (HttpURLConnection) (new URL("https://api.spigotmc.org/legacy/update.php?resource=96161")).openConnection();
-            int timed_out = 1250;
+            HttpURLConnection connection = (HttpURLConnection) (new URI("https://api.spigotmc.org/legacy/update.php?resource=96161").toURL()).openConnection();
 
-            connection.setConnectTimeout(timed_out);
-            connection.setReadTimeout(timed_out);
+            connection.setConnectTimeout(TIMEOUT);
+            connection.setReadTimeout(TIMEOUT);
 
             String latestVersion = (new BufferedReader(new InputStreamReader(connection.getInputStream()))).readLine();
 
             int latestVersionNumbers = Integer.parseInt(latestVersion.replaceAll("\\.", ""));
-            int pluginVersion = Integer.parseInt(PerWorldPlugins.getInstance().getDescription().getVersion().replaceAll("\\.", ""));
+            int pluginVersion = Integer.parseInt(PerWorldPlugins.getInstance().getPluginMeta().getVersion().replaceAll("\\.", ""));
 
             if (latestVersionNumbers > pluginVersion) {
                 Bukkit.getConsoleSender().sendMessage(PerWorldPlugins.getInstance().getName() + ChatColor.RED + " There is a new version available. " + ChatColor.YELLOW + "(" + ChatColor.GRAY + latestVersion + ChatColor.YELLOW + ")");
